--- a/app/src/main/res/layout/layout_qr_background.xml
+++ b/app/src/main/res/layout/layout_qr_background.xml
@@ -50,6 +50,25 @@
 
 
                 <com.ashique.qrscanner.custom.Buttons
+                    android:visibility="gone"
+                    android:id="@+id/btn_delete"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="15dp"
+                    android:gravity="center"
+                    android:padding="4dp"
+                    app:_activeColor="@color/text"
+                    app:_activeIconColor="@color/icon_active"
+                    app:_borderColor="@color/radio_buttons_border"
+                    app:_borderWidth="1dp"
+                    app:_fillColor="@color/radio_buttons_border"
+                    app:_icon="@drawable/ic_delete_photo"
+                    app:_iconColor="@color/text"
+                    app:_iconHeight="28dp"
+                    app:_iconWidth="28dp"
+                    app:_radius="3dp" />
+
+                <com.ashique.qrscanner.custom.Buttons
                     android:id="@+id/btn_adjust"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
@@ -105,6 +124,7 @@
 
 
             <TextView
+                android:id="@+id/effectLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -229,7 +249,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:max="200"
-                android:progress="100" />
+                android:progress="100"
+                android:progressDrawable="@drawable/seek_progress"
+                android:thumb="@drawable/seek_thumb" />
 
 
         <View
@@ -267,7 +289,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:max="300"
-                android:progress="100" />
+                android:progress="100"
+                android:progressDrawable="@drawable/seek_progress"
+                android:thumb="@drawable/seek_thumb" />
         </LinearLayout>
 
 
@@ -312,7 +336,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
-                android:max="10" />
+                android:max="10"
+                android:progressDrawable="@drawable/seek_progress"
+                android:thumb="@drawable/seek_thumb" />
         </LinearLayout>
 
         <View
@@ -388,7 +414,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:max="100" />
+                android:max="100"
+                android:progressDrawable="@drawable/seek_progress"
+                android:thumb="@drawable/seek_thumb" />
         </LinearLayout>
 
 
@@ -434,7 +462,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:max="300"
-                android:progress="100" />
+                android:progress="100"
+                android:progressDrawable="@drawable/seek_progress"
+                android:thumb="@drawable/seek_thumb" />
 
             <TextView
                 android:id="@+id/heightText"
@@ -453,7 +483,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:max="300"
-                android:progress="100" />
+                android:progress="100"
+                android:progressDrawable="@drawable/seek_progress"
+                android:thumb="@drawable/seek_thumb" />
 
         </LinearLayout>
 
