--- a/app/src/main/res/layout/layout_qr_logo.xml
+++ b/app/src/main/res/layout/layout_qr_logo.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
         android:orientation="vertical">
 
         <TextView
@@ -24,23 +24,74 @@
             android:textColor="@color/text"
             android:textSize="14sp" />
 
-        <com.ashique.qrscanner.custom.Buttons
-            android:id="@+id/btn_importLogo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="4dp"
-            app:_activeColor="@color/text"
-            app:_activeIconColor="@color/icon_active"
-            app:_borderColor="@color/radio_buttons_border"
-            app:_borderWidth="1dp"
-            app:_fillColor="@color/radio_buttons_border"
-            app:_icon="@drawable/ic_import"
-            app:_iconColor="@color/text"
-            app:_iconHeight="30dp"
-            app:_iconWidth="30dp"
-            app:_radius="3dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.ashique.qrscanner.custom.Buttons
+                android:id="@+id/btn_importLogo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="4dp"
+                app:_activeColor="@color/text"
+                app:_activeIconColor="@color/icon_active"
+                app:_borderColor="@color/radio_buttons_border"
+                app:_borderWidth="1dp"
+                app:_fillColor="@color/radio_buttons_border"
+                app:_icon="@drawable/ic_import"
+                app:_iconColor="@color/text"
+                app:_iconHeight="30dp"
+                app:_iconWidth="30dp"
+                app:_radius="3dp" />
+
+            <com.ashique.qrscanner.custom.Buttons
+                android:id="@+id/btn_delete"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="15dp"
+                android:gravity="center"
+                android:padding="4dp"
+                android:visibility="gone"
+                app:_activeColor="@color/text"
+                app:_activeIconColor="@color/icon_active"
+                app:_borderColor="@color/radio_buttons_border"
+                app:_borderWidth="1dp"
+                app:_fillColor="@color/radio_buttons_border"
+                app:_icon="@drawable/ic_delete_photo"
+                app:_iconColor="@color/text"
+                app:_iconHeight="28dp"
+                app:_iconWidth="28dp"
+                app:_radius="3dp" />
+
+            <com.ashique.qrscanner.custom.Buttons
+                android:id="@+id/btn_centerCrop"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="15dp"
+                android:gravity="center"
+                android:padding="4dp"
+                app:_activeColor="@color/text"
+                app:_activeIconColor="@color/icon_active"
+                app:_borderColor="@color/radio_buttons_border"
+                app:_borderWidth="1dp"
+                app:_fillColor="@color/radio_buttons_border"
+                app:_icon="@drawable/ic_center_crop"
+                app:_iconColor="@color/text"
+                app:_iconHeight="24dp"
+                app:_iconWidth="24dp"
+                app:_radius="3dp" />
+        </LinearLayout>
+
     </LinearLayout>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/shape_line" />
+
     <!-- Padding Slider -->
 
     <TextView
@@ -49,6 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/console"
         android:gravity="start|center"
         android:text="Padding"
@@ -61,17 +113,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/paddingLabel"
-        android:layout_marginTop="8dp"
-        android:max="100"
-        android:progress="10" />
+        android:progressDrawable="@drawable/seek_progress"
+        android:thumb="@drawable/seek_thumb" />
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/shape_line" />
 
     <!-- Logo Size Slider -->
     <TextView
         android:id="@+id/logoSizeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_below="@id/paddingSlider"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         android:text="Logo Size" />
 
     <SeekBar
@@ -80,62 +139,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/logoSizeLabel"
         android:layout_marginTop="8dp"
-        android:max="100"
-        android:progress="25" />
+        android:progressDrawable="@drawable/seek_progress"
+        android:thumb="@drawable/seek_thumb" />
 
-    <!-- Dark Pixel Roundness Slider -->
-    <TextView
-        android:id="@+id/darkPixelRoundnessLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/logoSizeSlider"
-        android:layout_marginTop="16dp"
-        android:text="Dark Pixel Roundness" />
 
-    <SeekBar
-        android:id="@+id/darkPixelRoundnessSlider"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/darkPixelRoundnessLabel"
-        android:layout_marginTop="8dp"
-        android:max="100"
-        android:progress="10" />
-
-    <!-- Ball Roundness Slider -->
-    <TextView
-        android:id="@+id/ballRoundnessLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/darkPixelRoundnessSlider"
-        android:layout_marginTop="16dp"
-        android:text="Ball Roundness" />
-
-    <SeekBar
-        android:id="@+id/ballRoundnessSlider"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/ballRoundnessLabel"
-        android:layout_marginTop="8dp"
-        android:max="100"
-        android:progress="25" />
-
-    <!-- Frame Roundness Slider -->
-    <TextView
-        android:id="@+id/frameRoundnessLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/ballRoundnessSlider"
-        android:layout_marginTop="16dp"
-        android:text="Frame Roundness" />
-
-    <SeekBar
-        android:id="@+id/frameRoundnessSlider"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/frameRoundnessLabel"
-        android:layout_marginTop="8dp"
-        android:max="100"
-        android:progress="25" />
 
 
 </LinearLayout>
