--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="text">#FF000000</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
@@ -19,4 +19,5 @@
     <color name="nts_line_inactive">#20000000</color>
     <color name="icon_active">@color/white</color>
     <color name="radio_buttons_border">#10000000</color>
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/radio_buttons_border</color>
 </resources>
